--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,107 +4,114 @@ on:
   push:
   schedule:
     - cron:  '1 */8 * * *'
+  workflow_dispatch:
 
 jobs:
   buildAUR:
     strategy:
       matrix:
         repos: [
-            firefox-nightly-i18n-ach,
-            firefox-nightly-i18n-af,
-            firefox-nightly-i18n-an,
-            firefox-nightly-i18n-ar,
-            firefox-nightly-i18n-ast,
-            firefox-nightly-i18n-az,
-            firefox-nightly-i18n-be,
-            firefox-nightly-i18n-bg,
-            firefox-nightly-i18n-bn,
-            firefox-nightly-i18n-br,
-            firefox-nightly-i18n-bs,
-            firefox-nightly-i18n-ca-valencia,
-            firefox-nightly-i18n-ca,
-            firefox-nightly-i18n-cak,
-            firefox-nightly-i18n-cs,
-            firefox-nightly-i18n-cy,
-            firefox-nightly-i18n-da,
-            firefox-nightly-i18n-de,
-            firefox-nightly-i18n-dsb,
-            firefox-nightly-i18n-el,
-            firefox-nightly-i18n-en-CA,
-            firefox-nightly-i18n-en-GB,
-            firefox-nightly-i18n-eo,
-            firefox-nightly-i18n-es-AR,
-            firefox-nightly-i18n-es-CL,
-            firefox-nightly-i18n-es-ES,
-            firefox-nightly-i18n-es-MX,
-            firefox-nightly-i18n-et,
-            firefox-nightly-i18n-eu,
-            firefox-nightly-i18n-fa,
-            firefox-nightly-i18n-ff,
-            firefox-nightly-i18n-fi,
-            firefox-nightly-i18n-fr,
-            firefox-nightly-i18n-fy-NL,
-            firefox-nightly-i18n-ga-IE,
-            firefox-nightly-i18n-gd,
-            firefox-nightly-i18n-gl,
-            firefox-nightly-i18n-gn,
-            firefox-nightly-i18n-gu-IN,
-            firefox-nightly-i18n-he,
-            firefox-nightly-i18n-hi-IN,
-            firefox-nightly-i18n-hr,
-            firefox-nightly-i18n-hsb,
-            firefox-nightly-i18n-hu,
-            firefox-nightly-i18n-hy-AM,
-            firefox-nightly-i18n-ia,
-            firefox-nightly-i18n-id,
-            firefox-nightly-i18n-is,
-            firefox-nightly-i18n-it,
-            firefox-nightly-i18n-ja,
-            firefox-nightly-i18n-ka,
-            firefox-nightly-i18n-kab,
-            firefox-nightly-i18n-kk,
-            firefox-nightly-i18n-km,
-            firefox-nightly-i18n-kn,
-            firefox-nightly-i18n-ko,
-            firefox-nightly-i18n-lij,
-            firefox-nightly-i18n-lt,
-            firefox-nightly-i18n-lv,
-            firefox-nightly-i18n-mk,
-            firefox-nightly-i18n-mr,
-            firefox-nightly-i18n-ms,
-            firefox-nightly-i18n-my,
-            firefox-nightly-i18n-nb-NO,
-            firefox-nightly-i18n-ne-NP,
-            firefox-nightly-i18n-nl,
-            firefox-nightly-i18n-nn-NO,
-            firefox-nightly-i18n-oc,
-            firefox-nightly-i18n-pa-IN,
-            firefox-nightly-i18n-pl,
-            firefox-nightly-i18n-pt-BR,
-            firefox-nightly-i18n-pt-PT,
-            firefox-nightly-i18n-rm,
-            firefox-nightly-i18n-ro,
-            firefox-nightly-i18n-ru,
-            firefox-nightly-i18n-si,
-            firefox-nightly-i18n-sk,
-            firefox-nightly-i18n-sl,
-            firefox-nightly-i18n-son,
-            firefox-nightly-i18n-sq,
-            firefox-nightly-i18n-sr,
-            firefox-nightly-i18n-sv-SE,
-            firefox-nightly-i18n-ta,
-            firefox-nightly-i18n-te,
-            firefox-nightly-i18n-th,
-            firefox-nightly-i18n-tl,
-            firefox-nightly-i18n-tr,
-            firefox-nightly-i18n-trs,
-            firefox-nightly-i18n-uk,
-            firefox-nightly-i18n-ur,
-            firefox-nightly-i18n-uz,
-            firefox-nightly-i18n-vi,
-            firefox-nightly-i18n-xh,
-            firefox-nightly-i18n-zh-CN,
-            firefox-nightly-i18n-zh-TW
+          firefox-nightly-i18n-ach,
+          firefox-nightly-i18n-af,
+          firefox-nightly-i18n-an,
+          firefox-nightly-i18n-ar,
+          firefox-nightly-i18n-ast,
+          firefox-nightly-i18n-az,
+          firefox-nightly-i18n-be,
+          firefox-nightly-i18n-bg,
+          firefox-nightly-i18n-bn,
+          firefox-nightly-i18n-br,
+          firefox-nightly-i18n-bs,
+          firefox-nightly-i18n-ca-valencia,
+          firefox-nightly-i18n-ca,
+          firefox-nightly-i18n-cak,
+          firefox-nightly-i18n-cs,
+          firefox-nightly-i18n-cy,
+          firefox-nightly-i18n-da,
+          firefox-nightly-i18n-de,
+          firefox-nightly-i18n-dsb,
+          firefox-nightly-i18n-el,
+          firefox-nightly-i18n-en-CA,
+          firefox-nightly-i18n-en-GB,
+          firefox-nightly-i18n-eo,
+          firefox-nightly-i18n-es-AR,
+          firefox-nightly-i18n-es-CL,
+          firefox-nightly-i18n-es-ES,
+          firefox-nightly-i18n-es-MX,
+          firefox-nightly-i18n-et,
+          firefox-nightly-i18n-eu,
+          firefox-nightly-i18n-fa,
+          firefox-nightly-i18n-ff,
+          firefox-nightly-i18n-fi,
+          firefox-nightly-i18n-fr,
+          firefox-nightly-i18n-fy-NL,
+          firefox-nightly-i18n-ga-IE,
+          firefox-nightly-i18n-gd,
+          firefox-nightly-i18n-gl,
+          firefox-nightly-i18n-gn,
+          firefox-nightly-i18n-gu-IN,
+          firefox-nightly-i18n-he,
+          firefox-nightly-i18n-hi-IN,
+          firefox-nightly-i18n-hr,
+          firefox-nightly-i18n-hsb,
+          firefox-nightly-i18n-hu,
+          firefox-nightly-i18n-hy-AM,
+          firefox-nightly-i18n-ia,
+          firefox-nightly-i18n-id,
+          firefox-nightly-i18n-is,
+          firefox-nightly-i18n-it,
+          firefox-nightly-i18n-ja,
+          firefox-nightly-i18n-ka,
+          firefox-nightly-i18n-kab,
+          firefox-nightly-i18n-kk,
+          firefox-nightly-i18n-km,
+          firefox-nightly-i18n-kn,
+          firefox-nightly-i18n-ko,
+          firefox-nightly-i18n-lij,
+          firefox-nightly-i18n-lt,
+          firefox-nightly-i18n-lv,
+          firefox-nightly-i18n-mk,
+          firefox-nightly-i18n-mr,
+          firefox-nightly-i18n-ms,
+          firefox-nightly-i18n-my,
+          firefox-nightly-i18n-nb-NO,
+          firefox-nightly-i18n-ne-NP,
+          firefox-nightly-i18n-nl,
+          firefox-nightly-i18n-nn-NO,
+          firefox-nightly-i18n-oc,
+          firefox-nightly-i18n-pa-IN,
+          firefox-nightly-i18n-pl,
+          firefox-nightly-i18n-pt-BR,
+          firefox-nightly-i18n-pt-PT,
+          firefox-nightly-i18n-rm,
+          firefox-nightly-i18n-ro,
+          firefox-nightly-i18n-ru,
+          firefox-nightly-i18n-si,
+          firefox-nightly-i18n-sk,
+          firefox-nightly-i18n-sl,
+          firefox-nightly-i18n-son,
+          firefox-nightly-i18n-sq,
+          firefox-nightly-i18n-sr,
+          firefox-nightly-i18n-sv-SE,
+          firefox-nightly-i18n-ta,
+          firefox-nightly-i18n-te,
+          firefox-nightly-i18n-th,
+          firefox-nightly-i18n-tl,
+          firefox-nightly-i18n-tr,
+          firefox-nightly-i18n-trs,
+          firefox-nightly-i18n-uk,
+          firefox-nightly-i18n-ur,
+          firefox-nightly-i18n-uz,
+          firefox-nightly-i18n-vi,
+          firefox-nightly-i18n-xh,
+          firefox-nightly-i18n-zh-CN,
+          firefox-nightly-i18n-zh-TW,
+          python-accesser,
+          python-accesser-git,
+          python-cyaron,
+          python-cyaron-git,
+          python-xeger,
+          python-xeger-git
         ]
         include:
           - repos: git-cola
