--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -172,3 +172,33 @@ jobs:
           tag: "packages"
           artifacts: "./upload_packages/*.sig,./upload_packages/*.files,./upload_packages/*.db,./upload_packages/*.tar.gz"
           token: ${{ secrets.GITHUB_TOKEN }}
+  uploadToR2:      
+    runs-on: ubuntu-latest
+    if: always()
+    needs: [buildAUR]
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/download-artifact@v4
+        id: download
+
+      - name: Display structure of downloaded files
+        run: ls -R ${{ steps.download.outputs.download-path }}
+      
+      - uses: ./create-db-and-upload-action
+        with:
+          RCLONE_S3_ACCESS_KEY_ID: ${{ secrets.RCLONE_S3_ACCESS_KEY_ID }}
+          RCLONE_S3_ENDPOINT: ${{ secrets.RCLONE_S3_ENDPOINT }}
+          RCLONE_S3_SECRET_KEY_ID: ${{secrets.RCLONE_S3_SECRET_KEY_ID}}
+          dest_path: /archlinux/repo
+          repo_name: archlinux-sving1024
+          gpg-privatekey: ${{ secrets.gpg_private_key }}
+          local_path: ${{ steps.download.outputs.download-path }}
+
+      - uses: ncipollo/release-action@v1
+        with:
+          allowUpdates: true
+          tag: "packages"
+          artifacts: "./upload_packages/*.sig,./upload_packages/*.files,./upload_packages/*.db,./upload_packages/*.tar.gz"
+          token: ${{ secrets.GITHUB_TOKEN }}
