--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           RCLONE_S3_ACCESS_KEY_ID: ${{ secrets.RCLONE_S3_ACCESS_KEY_ID }}
           RCLONE_S3_ENDPOINT: ${{ secrets.RCLONE_S3_ENDPOINT }}
-          RCLONE_S3_SECRET_KEY_ID: ${{secrets.RCLONE_S3_SECRET_KEY_ID}}
+          RCLONE_S3_SECRET_KEY: ${{secrets.RCLONE_S3_SECRET_KEY_ID}}
           dest_path: /archlinux/repo
           repo_name: archlinux-sving1024
           gpg-privatekey: ${{ secrets.gpg_private_key }}
