--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: BUILD-test-R2
+name: BUILD-test-general
 
 on:
   workflow_dispatch:
@@ -7,9 +7,8 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [
-          firefox-nightly-i18n-ach
-        ]
+        repos: [firefox-nightly-i18n-zh-cn]
+
       fail-fast: false
       
     runs-on: ubuntu-latest
@@ -33,27 +32,31 @@ jobs:
         allowUpdates: true
         tag: "packages"
         artifacts: "./*/*.zst"
-        token: ${{ secrets.GITHUB_TOKEN }}          
-  uploadToR2:      
+        token: ${{ secrets.GITHUB_TOKEN }}
+          
+  uploadToCloudStorage:      
     runs-on: ubuntu-latest
     if: always()
     needs: [buildAUR]
-
+    strategy:
+      matrix:
+        config_name: [ R2,onedrive ]
+    
     steps:
       - uses: actions/checkout@v4
-      
+        with: 
+          ref: refs/heads/dev
       - uses: actions/download-artifact@v4
         id: download
 
       - name: Display structure of downloaded files
         run: ls -R ${{ steps.download.outputs.download-path }}
       
-      - uses: ./create-db-and-upload-action-cloudflare-r2
+      - uses: ./create-db-and-upload-action-general
         with:
-          RCLONE_S3_ACCESS_KEY_ID: ${{ secrets.RCLONE_S3_ACCESS_KEY_ID }}
-          RCLONE_S3_ENDPOINT: ${{ secrets.RCLONE_S3_ENDPOINT }}
-          RCLONE_S3_SECRET_KEY: ${{secrets.RCLONE_S3_SECRET_KEY_ID}}
-          dest_path: /repo/archlinux/repo
+          RCLONE_CONFIG: ${{ secrets.RCLONE_CONFIG }}
+          RCLONE_CONFIG_NAME: ${{matrix.config_name}}
+          dest_path: /repo/archlinux/
           repo_name: archlinux-sving1024
           gpg-privatekey: ${{ secrets.gpg_private_key }}
           local_path: ${{ steps.download.outputs.download-path }}
