--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -130,15 +130,10 @@ jobs:
         path: ./*/*.pkg.tar.zst
         name: ${{ matrix.repos }}
         if-no-files-found: error
-        
-#    - uses: ncipollo/release-action@v1
-#      with:
-#        allowUpdates: true
-#        tag: "packages"
-#        artifacts: "./*/*.zst"
-#        token: ${{ secrets.GITHUB_TOKEN }}
-          
-  uploadToOneDrive:      
+  uploadToR2:
+    strategy:
+      matrix:
+        remote: [ onedrive, r2 , webdav]
     runs-on: ubuntu-latest
     if: always()
     needs: [buildAUR]
@@ -154,42 +149,8 @@ jobs:
       
       - uses: ./create-db-and-upload-action
         with:
-          RCLONE_ONEDRIVE_CLIENT_ID: ${{ secrets.RCLONE_ONEDRIVE_CLIENT_ID }}
-          RCLONE_ONEDRIVE_CLIENT_SECRET: ${{ secrets.RCLONE_ONEDRIVE_CLIENT_SECRET }}
-          RCLONE_ONEDRIVE_REGION: global
-          RCLONE_ONEDRIVE_TOKEN: ${{ secrets.RCLONE_ONEDRIVE_TOKEN }}
-          RCLONE_ONEDRIVE_DRIVE_ID: ${{ secrets.RCLONE_ONEDRIVE_DRIVE_ID }}
-          RCLONE_ONEDRIVE_DRIVE_TYPE: business
-          dest_path: /archlinux/repo
-          repo_name: archlinux-sving1024
-          gpg-privatekey: ${{ secrets.gpg_private_key }}
-          local_path: ${{ steps.download.outputs.download-path }}
-
-#      - uses: ncipollo/release-action@v1
-#        with:
-#          allowUpdates: true
-#          tag: "packages"
-#          artifacts: "./upload_packages/*.sig,./upload_packages/*.files,./upload_packages/*.db,./upload_packages/*.tar.gz"
-#          token: ${{ secrets.GITHUB_TOKEN }}
-  uploadToR2:      
-    runs-on: ubuntu-latest
-    if: always()
-    needs: [buildAUR]
-
-    steps:
-      - uses: actions/checkout@v4
-      
-      - uses: actions/download-artifact@v4
-        id: download
-
-      - name: Display structure of downloaded files
-        run: ls -R ${{ steps.download.outputs.download-path }}
-      
-      - uses: ./create-db-and-upload-action-cloudflare-r2
-        with:
-          RCLONE_S3_ACCESS_KEY_ID: ${{ secrets.RCLONE_S3_ACCESS_KEY_ID }}
-          RCLONE_S3_ENDPOINT: ${{ secrets.RCLONE_S3_ENDPOINT }}
-          RCLONE_S3_SECRET_KEY: ${{secrets.RCLONE_S3_SECRET_KEY_ID}}
+          RCLONE_CONFIG_CONTENT: ${{secrets.RCLONE_CONFIG}}
+          RCLONE_CONFIG_NAME: ${{matrix.remote}}
           dest_path: /repo/archlinux/
           repo_name: archlinux-sving1024
           gpg-privatekey: ${{ secrets.gpg_private_key }}
