add python packages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,9 @@ jobs:
       matrix:
         repos: [
           python-accesser,
-          python-cyaron-git
+          python-cyaron,
+          python-xeger,
+          python-dnsstamps
         ]
       fail-fast: false
       
